--- a/Exploring Rmarkdown.Rmd
+++ b/Exploring Rmarkdown.Rmd
@@ -1,40 +1,49 @@
 ---
 title: "Exploring Rmarkdown"
 author: "Matthew Zimmerman"
-date:  "1/23/2020"
-output: html_document
+date: Last updated `r format(Sys.time(), "%D %B, %Y")`
+output: 
+  html_document:
+    theme: cerulean
+    toc: TRUE
 ---
 YAML
 
-backtics are code blocks
-```{r}
-2+2
+```{r, echo=FALSE}
+2 + 2
 
-install.packages("gapminder")
-install.packages("DT")
-install.packages("tibble")
+# install.packages("gapminder")
+# install.packages("DT")
+# install.packages("tibble")
 
+library(gapminder)
+library(DT)
+library(tibble)
+```
+
+```{r this is the name, echo=FALSE}
+
+gapminder
+
+mtcars
+
+
+mtcars["mpg"]
+mtcars[["mpg"]]
+mean(mtcars["mpg"])
+
+mean(mtcars$mpg)
+mtcars$mpg
+
+
+mtcars["cyl"]
+unique(mtcars["cyl"])
+
+```
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
