--- a/Plotting/Plot_practice_R.Rmd
+++ b/Plotting/Plot_practice_R.Rmd
@@ -42,7 +42,7 @@ gapminder %>%
   mutate(continent = fct_infreq(continent)) %>% 
   ggplot(aes(continent)) +
   geom_bar() +
-  theme_bw()
+  theme_bw()ggplot(gapminder, aes(gdpPercap, lifeExp))
 ```
 
 Fill in the seven grammar components for this plot.
@@ -50,14 +50,42 @@ Fill in the seven grammar components for this plot.
 | Grammar Component     | Specification |
 |-----------------------|---------------|
 | __data__              | `gapminder` |
-| __aesthetic mapping__ | FILL_THIS_IN |
-| __geometric object__  | FILL_THIS_IN |
-| scale                 | FILL_THIS_IN |
-| statistical transform | FILL_THIS_IN |
-| coordinate system     | FILL_THIS_IN |
-| facetting             | FILL_THIS_IN |
+| __aesthetic mapping__ | x = continent, y = count|
+| __geometric object__  | bar |
+| scale                 | linear |
+| statistical transform | none |
+| coordinate system     | rectangular |
+| facetting             | none|
 
 ## Exercise 2: `ggplot2` Syntax (Your Turn)
+
+ggplot(gapminder, aes(gdpPercap, lifeExp))
+
+#overploting 
+ggplot(gapminder, aes(gdpPercap, lifeExp)) +
+  geom_point() 
+  
+#better
+ggplot(gapminder, aes(gdpPercap, lifeExp)) +
+  geom_point(alpha = 0.1)
+  
+  
+```{r}
+ggplot(gapminder, aes(gdpPercap, lifeExp)) + aes(colour = continent) +
+    geom_point(alpha = 0.1) + 
+    scale_x_log10("GDP per capita", labels = scales::dollar_format())
+
+
+
+ggplot(gapminder, aes(gdpPercap, lifeExp)) + aes(colour = continent)+
+  geom_point(alpha = 0.1) +
+  scale_x_log10("GDP per capita", labels = scales::dollar_format()) +
+  theme_bw() +
+  ylab("Life Expectancy")
+
+
+```
+
 
 The following is a tsibble (a special type of tibble containing time series data, which we'll see more of later), stored in the variable `mauna`, of CO$_2$ concentrations collected monthly at the Mauna Loa station.
 
@@ -85,8 +113,10 @@ Produce a line chart showing the concentration over time. Specifically, the plot
   Fill in the blanks to obtain the plot:
   
   ```{r, fig.width = 5, fig.height = 2}
-ggplot(FILL_THIS_IN, aes(FILL_THIS_IN, FILL_THIS_IN)) +
-  FILL_THIS_IN()
+  
+ggplot(mauna, aes(month, conc)) +
+  geom_line()
+  
 ```
 
 ### 2(b)
@@ -99,8 +129,12 @@ It turns out that you're allowed to specify the aesthetic mappings in a `geom` l
 The following code mistakenly puts the month variable on the y-axis. Fill in the `FILL_THIS_IN` so that you still obtain the same result as above.
 
 ```{r, fig.width = 5, fig.height = 2}
+
+
 ggplot(mauna, aes(y = month)) +
-  geom_line(aes(FILL_THIS_IN))
+  geom_line(aes(x = month))
+
+
 ```
 
 ### 2(c)
@@ -108,8 +142,11 @@ ggplot(mauna, aes(y = month)) +
 You can store the output of the plot in a variable, too. Store the plot from 2(a) in the variable named `p`, then add a layer to `p` that adds green points to the plot.
 
 ```{r, fig.width = 5, fig.height = 2}
+p<- ggplot(mauna, aes(y = month)) +
+  geom_line(aes(x = month))
+
 p +
-  FILL_THIS_IN(colour = FILL_THIS_IN)
+  geom_point(colour = "green")
 ```
 
 ### 2(d)
@@ -117,8 +154,11 @@ p +
 What's wrong with the following code? Fix it.
 
 ```{r, fig.width = 5, fig.height = 2}
-ggplot(gapminder) +
-  geom_point(x = gdpPercap, y = lifeExp, alpha = 0.1)
+#ggplot(gapminder) +
+  #geom_point(x = gdpPercap, y = lifeExp, alpha = 0.1)
+
+
+ggplot(gapminder, aes(gdpPercap, lifeExp)) +  geom_point(alpha = 0.1)
 ```
 
 
@@ -133,4 +173,8 @@ The plot should look like a spiral, or concentric circles.
 
 ```{r, fig.width = 5, fig.height = 2}
 FILL_THIS_IN
+
+ggplot(mauna, aes(month, conc)) + aes(colour = month)+
+    geom_line() + coord_polar() +
+    theme_void()
 ```
