--- a/Plotting/s03b_ggplot_p2-exercise.Rmd
+++ b/Plotting/s03b_ggplot_p2-exercise.Rmd
@@ -40,8 +40,10 @@ Fix the overlapping data points problem in the following plot by adding an `alph
 or `size` argument (attribution: ["R for data science"](https://r4ds.had.co.nz/data-visualisation.html)).
 
 ```{r, fig.width = 5, fig.height = 2}
-ggplot(mpg, aes(cty, hwy)) + 
-  geom_point(alpha = .1)
+ggplot(mpg, aes(cty, hwy)) +
+  geom_jitter(alpha = 0.5, size = 1) +
+  geom_smooth(method = "lm") +
+  theme_bw()
 ```
 
 
@@ -55,8 +57,9 @@ also notice that `ggplot2` ignores the grouping of a tibble!
 
 ```{r, fig.width = 5, fig.height = 2}
 gapminder %>% 
-    ggplot(aes(year, lifeExp)) +
-    geom_line((aes(group = country)))
+  ggplot(aes(year, lifeExp, group = country, colour = country == "Rwanda")) +
+  geom_line(alpha = 1/3) +
+  scale_colour_discrete("", labels = c("Other", "Rwanda"))
 ```
 
 
@@ -70,9 +73,8 @@ gapminder %>%
 ```{r, fig.width = 5, fig.height = 2}
 ggplot(gapminder, aes(gdpPercap, lifeExp)) +
   geom_point(alpha = 0.2) +
-  scale_x_log10(labels = 
-                scales::comma_format()) +
-  facet_wrap(vars(continent))
+  scale_x_log10(labels = scales::comma_format()) +
+  facet_wrap(~ continent, scales = "free_y")
 ```
 
 ### 3(b) Bubble Plot
@@ -122,8 +124,8 @@ tribble(
   4, 0.4, 0.5
 ) %>% 
   ggplot(aes(x, y)) + 
-  geom_text(aes(label = time), vjust = 0.5, hjust = 2) +
-  geom_line(arrow = arrow())
+  geom_path(arrow = arrow()) +
+  geom_text(aes(label = time), nudge_y = 0.1, nudge_x = -0.02)
 ```
 
 ## Exercise 5: Life expectancies in Africa
@@ -138,11 +140,9 @@ There is also the problem of overlapping text in the x-axis labels. How could we
 gapminder %>% 
   filter(continent == "Americas") %>% 
   ggplot(aes(country, lifeExp)) + 
-  geom_jitter() +
-  geom_boxplot(alpha = 0.1) +
-  scale_x_discrete() +
-   theme(axis.text.x = 
-        element_text(angle = 90, size = 10))
+  geom_boxplot(outlier.alpha = 0) +
+  geom_jitter(alpha = 0.25, height = 0.2) +
+  coord_flip()
 ```
 
 ### 5(b) Ridgeplots
@@ -151,11 +151,15 @@ We're starting with the same plot as above, but instead of the points + boxplot,
 
 ```{r, fig.width = 5, fig.height = 2}
 gapminder %>% 
+	filter(continent == "Americas") %>% 
+	ggplot(aes(lifeExp, country)) + 
+	ggridges::geom_density_ridges() +
+	# ggridges::geom_rug(aes(group = country))
+gapminder %>% 
   filter(continent == "Americas") %>% 
-  ggplot(aes(x = lifeExp, y = country)) + 
-  ggridges::geom_density_ridges() +
-  theme(axis.text.y = 
-        element_text(size = 6))
+  mutate(country = fct_reorder(country, lifeExp, median)) %>% # More on this line later
+  ggplot(aes(lifeExp, country)) + \
+  ggridges::geom_density_ridges()
   
 ```
 
@@ -173,9 +177,9 @@ gapminder %>%
 ```{r, fig.width = 5, fig.height = 2}
 mtcars %>% 
   mutate(transmission = if_else(am == 0, "automatic", "manual")) %>% 
-  ggplot(aes(cyl)) +
-  geom_bar(aes(color = transmission))
-   
+  ggplot(aes(cyl, ..prop..)) +
+  geom_bar(aes(fill = transmission), position = "dodge") +
+  scale_x_continuous(breaks = c(4, 6, 8))
   
 
 ```
@@ -193,7 +197,7 @@ Fix the following bar plot so that it shows these counts.
 
 ```{r}
 ggplot(hair, aes(Hair, n)) +
-  geom_bar()
+  geom_col()
 ```
 
 ## Exercise 7: Tiling
@@ -210,7 +214,7 @@ _Hint:_ What's the title of this exercise?
 
 ```{r}
 ggplot(hair_eye, aes(Hair, Eye)) +
-  geom_point(aes(colour = n))
+  geom_tile(aes(fill = n))
 ```
 
 By the way, `geom_count()` is like `geom_bar()`: it counts the number of overlapping points.
@@ -220,14 +224,61 @@ By the way, `geom_count()` is like `geom_bar()`: it counts the number of overlap
 
 If you'd like some practice, give these exercises a try
 
-__Exercise 1__: Make a plot of `year` (x) vs `lifeExp` (y), with points coloured by continent. Then, to that same plot, fit a straight regression line to each continent, without the error bars. If you can, try piping the data frame into the `ggplot()` function.
+__Exercise 1__: Make a plot of `year` (x) vs `lifeExp` (y), with points coloured by continent. Then, to that same plot, fit a straight regression line to each continent, without the error bars. If you can, try piping the data frame into the `ggplot()` 
+
+```{r, fig.width = 5, fig.height = 2}
+gapminder %>% 
+  ggplot(aes(year, lifeExp, colour = continent)) +
+  geom_jitter(width = 0.75, alpha = 0.1) +
+  geom_smooth(method = "lm", se = FALSE)
+```
 
 __Exercise 2__: Repeat Exercise 1, but switch the _regression line_ and _geom\_point_ layers. How is this plot different from that of Exercise 1?
 
+```{r, fig.width = 5, fig.height = 2}
+
+gapminder %>% 
+  ggplot(aes(year, lifeExp, colour = continent)) +
+  geom_smooth(method = "lm", se = FALSE) +
+  geom_jitter(width = 0.75, alpha = 0.1)
+
+```
+
 __Exercise 3__: Omit the `geom_point()` layer from either of the above two plots (it doesn't matter which). Does the line still show up, even though the data aren't shown? Why or why not?
+> `geom_smooth()` doesn't need the points to be _drawn_ in order to fit the regression line. It only uses the aesthetic mappings. 
+
+```{r, fig.width = 5, fig.height = 2}
+gapminder %>% 
+  ggplot(aes(year, lifeExp, colour = continent)) +
+  geom_smooth(method = "lm", se = FALSE)
+```
 
 __Exercise 4__: Make a plot of `year` (x) vs `lifeExp` (y), facetted by continent. Then, fit a smoother through the data for each continent, without the error bars. Choose a span that you feel is appropriate.
 
+```{r, fig.width = 8, fig.height = 2}
+ggplot(gapminder, aes(year, lifeExp)) +
+  facet_wrap(~ continent, nrow = 1) +
+  geom_line(aes(group = country), alpha = 0.2) +
+  geom_smooth(se = FALSE) +
+  scale_x_continuous(breaks = seq(1952, 3000, by = 15))
+```
+
 __Exercise 5__: Plot the population over time (year) using lines, so that each country has its own line. Colour by `gdpPercap`. Add alpha transparency to your liking. 
 
+```{r, fig.width = 5, fig.height = 2}
+ggplot(gapminder, aes(year, pop)) +
+  geom_line(aes(group = country, colour = gdpPercap), alpha = 0.1) +
+  scale_y_log10() +
+  scale_colour_continuous(trans = "log", breaks = 10^(1:100), 
+                          labels = scales::comma_format())
+```
+
 __Exercise 6__: Add points to the plot in Exercise 5.
+
+```{r, fig.width = 5, fig.height = 2}
+ggplot(gapminder, aes(year, pop)) +
+  geom_point(alpha = 0.1, size = 0.1) +
+  geom_line(aes(group = country, colour = gdpPercap), alpha = 0.1) +
+  scale_y_log10() +
+  scale_colour_continuous(trans = "log", breaks = 10^(1:100), 
+                          labels = scales::comma_format())
