--- a/Wrangling/s04_data-wrangling-exercise.Rmd
+++ b/Wrangling/s04_data-wrangling-exercise.Rmd
@@ -32,18 +32,21 @@ Hint: You can add the `suppressPackageStartupMessages()` function around the
     
 ```{r load packages, warning = FALSE, message = FALSE}
 # load your packages here:
-library(FILL_THIS_IN)
-library(FILL_THIS_IN)
+library(tidyverse)
+library(gapminder)
 ```
-    
+  #converting row names to col
+  #mtcars %>%
+  #rownames_to_column() %>% 
+  #as_tibble()
 
 ## `select()`
 
 1. Make a data frame containing the columns `year`, `lifeExp`, `country` from 
-the `gapminder` data, in that order.
+the `gapminder` data, in that order. changeing order in the ask will change output in call, make sur to use full variable name. 
 
 ```{r}
-select(gapminder, FILL_THIS_IN)
+select(gapminder, year, lifeExp, country)
 ```
 
 2. Select all variables, from `country` to `lifeExp`.
@@ -53,29 +56,45 @@ select(gapminder, FILL_THIS_IN)
 select(gapminder, country, continent, year, lifeExp)
 
 # Better way:
-select(gapminder, FILL_THIS_IN)
+select(gapminder, country:lifeExp)
 ```
 
 3. Select all variables, except `lifeExp`.
 
 ```{r}
-select(gapminder, FILL_THIS_IN)
+select(gapminder, -lifeExp)
 ```
 
 4. Put `continent` first. Hint: use the `everything()` function.
 
 ```{r}
-select(gapminder, FILL_THIS_IN, FILL_THIS_IN)
+select(gapminder, continent, everything())
 ```
 
 5. Rename `continent` to `cont`.
 
 ```{r}
-# compare
-select(gapminder, FILL_THIS_IN)
+# compare new name = old name
+select(gapminder, cont = continent, everything())
 
-rename(gapminder, FILL_THIS_IN)
+rename(gapminder, cont = continent)
+
+rename_all(gapminder, toupper)
+rename_all(gapminder ~ toupper(.x))
+#tilde is good because you can string multiple things together
+#dont forget to assign it as anew varible if you want to save the results of what you did. 
 ```
+
+```{r}
+
+mtcars %>% 
+
+select("cyl"/"mpg", everything())
+
+
+```
+
+
 
 
 ## `arrange()`
@@ -83,19 +102,19 @@ rename(gapminder, FILL_THIS_IN)
 1. Order by year.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, year)
 ```
 
 2. Order by year, in descending order.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, desc(year))
 ```
 
 3. Order by year, then by life expectancy.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN, FILL_THIS_IN)
+arrange(gapminder, desc(year), desc(lifeExp))
 ```
 
 
@@ -127,14 +146,17 @@ Now using with pipes:
 
 ```{r}
 # alter the below to include 2 "pipes"
-arrange(select(gapminder, year, lifeExp, country), year, lifeExp)
+#arrange(select(gapminder, year, lifeExp, country), year, lifeExp)
+
+gapminder %>% 
+             select(year, lifeExp, country) %>% 
+               arrange(year, lifeExp)
 ```
 
 
 # Back to Guide 
 
 Return to guide at the section on *Relational/Comparison and Logical Operators in R*.
-
 
 # Transforming datasets
 
